Part 3, add second exercise

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 <head>
   <meta charset="utf-8">
   <title>Lapio website</title>
+  <b style ="font-size:40px" > Hello </b>
 </head>
 
 <body>
   <!--Do the exercises here-->
+  <b style ="font-size:30px" > This is my website </b>
+ <p style ="font-size:30px" > I like to watch movies </p>
 </body>
 
 </html>
