Part 3, add exercise 4

--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 <body>
   <!--Do the exercises here-->
   <b style ="font-size:30px" > This is my website </b>
- <p style ="font-size:30px" > I like to watch movies </p>
+  <p style ="font-size:30px" > I like to watch movies </p>
+  <p style ="font-size:30px" > The learning goals for this course 
+  are in essence to</p>
+  <ul>
+	 <li>learn HTML</li>
+	 <ul>
+		 <li> Understand some things</li>
+	</ul>
+	<li>  learn CSS</li>
+	<ul>
+		<li> know what ccs is</li>
+	</ul>
+</ul>
+
+
+
 </body>
 
 </html>
