Part 3, add fifth exercise

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	<ul>
 		<li> know what ccs is</li>
 	</ul>
-</ul>
-
+  </ul>
+ <img src="./assets/picture.jpg" alt="helsinki" height="240" width="320"/>
 
 
 </body>
