Part 3, add sixth exercise

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		<li> know what ccs is</li>
 	</ul>
   </ul>
- <img src="./assets/picture.jpg" alt="helsinki" height="240" width="320"/>
+  <a href="2.html">Yle news</a>
+
+  <img src="./assets/picture.jpg" alt="helsinki" height="240" width="320"/>
 
 
 </body>
