--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>Lapio website</title>
   <b style ="font-size:40px" > Hello </b>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -25,7 +26,6 @@
 	</ul>
   </ul>
   <a href="2.html">Yle news</a>
-
   <img src="./assets/picture.jpg" alt="helsinki" height="240" width="320"/>
 
 
